...
            "state": "translated",
            "value": "Have it set up"
          }
        }
      }
    },
    "Einstellungen": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        }
      }
    },
    "Einverstanden": {
      "localizations": {
...
            "state": "translated",
            "value": "Behaviour"
          }
        }
      }
    },
    "Verlauf": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "History"
          }
        }
      }
    },
    "Viele Anbieter unter einer Adresse und einem Schlüssel.": {
      "localizations": {
...
